--- a/estilos.css
+++ b/estilos.css
@@ -44,5 +44,18 @@ body{
     font-size: 28px;
 }
 .menu{
-    
+    background-color: #6b6b6b;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align:center;
+    padding: top 19px;
+    padding-bottom: 19px;
+    color: white;
+}
+.item-menu{
+    color: #0f0f0f;
+    font-size: 18px;
+    font-weight: 500px;
+
 }
