--- a/estilos.css
+++ b/estilos.css
@@ -39,7 +39,7 @@ body{
     font-family:'Cookie';
     font-weight: 100;
  
-}
+}            
 .texto-pequeno{
     font-size: 28px;
 }
@@ -91,3 +91,64 @@ column-count: 3;
         margin-left:auto;
         margin-right: auto;
     }
+
+    .fotos{
+        text-align: center;
+        font-family: 'Cookie';
+        font-size: 28px;
+        font-weight: 100;
+        background-color: #6b6b6b;
+       
+
+      
+    }
+        
+
+    
+
+ 
+ .imagens{  
+    width: 170px;
+    height: 170px;
+    border: 5px dotted rgb(219, 204, 204);
+    background-color: rgb(219, 204, 204);
+    padding: 10px;
+    border-radius: 100px;
+
+    margin-top:0px;
+ margin-right:auto;
+ margin-bottom:0px;
+ margin-left:auto;
+ text-align:center;
+ padding-top: 20px;
+ padding-bottom: 22px;
+
+
+}
+.bolo-2{
+    width: 170px;
+    height: 170px;
+    border: 5px dotted rgb(219, 204, 204);
+    background-color: rgb(219, 204, 204);
+    padding: 10px;
+    border-radius: 100px;
+
+}
+.contatos{
+    text-align: center;
+    font-family: 'Cookie';
+    font-size: 28px;
+    font-weight: 100;
+
+} 
+.roadape{
+
+}
+
+    
+
+
+
+ 
+
+    
